--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -174,7 +174,7 @@
             border-radius: 0.5em;
             background-color: color.$green;
             &.proposal-exists {
-                background-color: color.$blue;
+                background-color: color.$blue !important;
             }
         }
     }
