--- a/src/components/export/export.scss
+++ b/src/components/export/export.scss
@@ -47,7 +47,7 @@
         flex: 1;
         width: 100%;
         @include mixin.no-scrollbar;
-        background-color: rgba(color.$darkest, 0.25);
+        box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
         border-radius: size.$task-radius;
         overflow-y: scroll;
         .code {
@@ -122,6 +122,7 @@
     .MuiTextField-root {
         p.Mui-error {
             color: color.$red;
+            font-weight: 800;
             font-family: font.$text;
             font-size: size.$small-text;
             &::before {
@@ -130,6 +131,7 @@
         }
         label {
             font-family: font.$text;
+            font-weight: 800;
             &.Mui-focused {
                 color: color.$light-text;
             }
@@ -151,10 +153,10 @@
             fieldset {
                 border-color: color.$lightish;
                 border-width: 1px;
-                background-color: rgba(color.$darkest, 0.25);
+                box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
                 border-radius: 0;
                 legend {
-                    background-color: color.$dark;
+                    background-color: color.$black;
                     margin-left: -2px;
                     padding: 2px;
                     border-radius: 20px;
@@ -166,10 +168,10 @@
                 }
             }
             &:hover fieldset {
-                border-color: color.$light;
+                border-color: color.$white;
             }
             &.Mui-focused fieldset {
-                border-color: color.$light;
+                border-color: color.$white;
             }
             &.Mui-error fieldset {
                 border-color: color.$red !important;
@@ -182,7 +184,7 @@
             }
             &:hover::after,
             &::after {
-                border-bottom-color: color.$light;
+                border-bottom-color: color.$white;
             }
             input {
                 font-weight: 500;
@@ -215,7 +217,7 @@ option {
 
 .error-container {
     width: 100%;
-    .sidebar {
+    .header {
         padding-left: 0.5 * size.$gap;
         h3 {
             font-size: size.$text;
@@ -228,7 +230,7 @@ option {
         display: flex;
         flex-flow: column nowrap;
         padding-top: 0.5 * size.$gap;
-        background-color: rgba(color.$darkest, 0.25);
+        box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
         border-radius: size.$task-radius;
         .error {
             width: 100%;
@@ -239,6 +241,7 @@ option {
             gap: 0.5 * size.$gap;
             flex-flow: row nowrap;
             font-size: size.$text;
+            font-weight: 800;
             color: color.$red;
             .msg {
                 @include mixin.no-wrap;
