--- a/src/families/base.scss
+++ b/src/families/base.scss
@@ -17,13 +17,13 @@
 @mixin cb-scale($factor) {
     zoom: $factor; /* IE */
     -moz-transform: scale($factor); /* Firefox */
-    -moz-transform-origin: 0 0;
+    -moz-transform-origin: center center;
     -o-transform: scale($factor); /* Opera */
-    -o-transform-origin: 0 0;
+    -o-transform-origin: center center;
     -webkit-transform: scale($factor); /* Safari And Chrome */
-    -webkit-transform-origin: 0 0;
+    -webkit-transform-origin: center center;
     transform: scale($factor); /* Standard Property */
-    transform-origin: 0 0;  /* Standard Property */
+    transform-origin: center center;  /* Standard Property */
   }
 
 .base-task  {
@@ -207,6 +207,7 @@
     .MuiTextField-root {
         p.Mui-error {
             color: color.$red;
+            font-weight: 800;
             font-family: font.$text;
             font-size: size.$small-text;
             &::before {
@@ -215,6 +216,7 @@
         }
         label {
             font-family: font.$text;
+            font-weight: 800;
             &.Mui-focused {
                 color: color.$light-text;
             }
@@ -236,10 +238,10 @@
             fieldset {
                 border-color: color.$lightish;
                 border-width: 1px;
-                background-color: rgba(color.$darkest, 0.25);
+                box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
                 border-radius: 0;
                 legend {
-                    background-color: color.$dark;
+                    background-color: color.$black;
                     margin-left: -2px;
                     padding: 2px;
                     border-radius: 20px;
@@ -251,10 +253,10 @@
                 }
             }
             &:hover fieldset {
-                border-color: color.$light;
+                border-color: color.$white;
             }
             &.Mui-focused fieldset {
-                border-color: color.$light;
+                border-color: color.$white;
             }
             &.Mui-error fieldset {
                 border-color: color.$red !important;
@@ -267,7 +269,7 @@
             }
             &:hover::after,
             &::after {
-                border-bottom-color: color.$light;
+                border-bottom-color: color.$white;
             }
             input {
                 font-weight: 500;
