--- a/sass/_color.scss
+++ b/sass/_color.scss
@@ -6,15 +6,13 @@ $yellow: #ffdf82;
 
 $lightest: #dcefea;
 $light: #b4ccca;
-$lightish: #8fa9ac;
-$darkish: #6c888f;
-$dark: #4c6773;
-$darkest: #2f4858;
-
-$fake-column: #e9faf6;
+$lightish: #A4BAB8;
+$darkish: #839595;
+$dark: #637171;
+$darkest: #424C4E;
 
 $white: #edfdf9;
-$black: #2a2a2a;
+$black: #323A3C;
 
 $text: #2a2a2a;
 $light-text: #e0e0e0;
