--- a/src/components/builder/builder.scss
+++ b/src/components/builder/builder.scss
@@ -24,7 +24,7 @@
         background-color: transparent !important;
         .tasks-wrapper {
             flex: 1 1 0;
-            background-color: rgba(color.$darkest, 0.25);
+            box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
             .task-wrapper:last-of-type {
                 margin-bottom: 0 !important;
             }
