--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -19,7 +19,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        height: calc(2.5 * size.$gap - 0.5 * (size.$gap - size.$large-text));
+        height: calc(2 * size.$gap + 0.5 * size.$large-text);
         min-width: 100%;
         background-color: color.$light;
     }
