--- a/src/components/builder/builder.scss
+++ b/src/components/builder/builder.scss
@@ -31,6 +31,9 @@
             .icon {
                 display: none;
             }
+            .task-container {
+                outline: none !important;
+            }
         }
     }
 }
