dao status indicator

--- a/src/components/wallet/wallet.scss
+++ b/src/components/wallet/wallet.scss
@@ -124,6 +124,14 @@
                 display: none;
             }
         }
+        &.red > .icon {
+            border-color: color.$red;
+            color: color.$red;
+        }
+        &.yellow > .icon {
+            border-color: color.$yellow;
+            color: color.$yellow;
+        }
     }
 }
 
