--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -79,7 +79,7 @@
             }
         }
         .info-text {
-            font-size: size.$small-text;
+            font-size: size.$text;
             color: color.$dark;
             max-width: 40em;
             a {
@@ -182,7 +182,7 @@
         .create-multicall {
             width: fit-content;
             align-self: center;
-            font-size: size.$small-text;
+            font-size: size.$text;
             padding: 0.25em 0.75em;
             border-radius: 0.5em;
             background-color: color.$green;
