Feat/vote on create multicall (#115)
* Move SputnikDAO methods to own class

* Add voting on creating a multicall instance

* Only display failed checks on DAO page errors

* View methods directly use RPC instead of relying on user login

Co-authored-by: mohamedalichelbi <mohamedalichelbi123@gmail.com>
Co-authored-by: lennart Czardybon <lennczar@gmail.com>

--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -78,6 +78,14 @@
                 color: color.$green;
             }
         }
+        .info-text {
+            font-size: size.$text;
+            color: color.$dark;
+            max-width: 40em;
+            a {
+                color: darken(color.$blue, 20%) !important;
+            }
+        }
         .info-card {
             display: flex;
             position: relative;
@@ -174,7 +182,7 @@
         .create-multicall {
             width: fit-content;
             align-self: center;
-            font-size: size.$small-text;
+            font-size: size.$text;
             padding: 0.25em 0.75em;
             border-radius: 0.5em;
             background-color: color.$green;
