added dialog for load from proposal

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -6,7 +6,12 @@
 .light-textfield {
     &.MuiTextField-root {
         .MuiInputLabel-root, .MuiFilledInput-root.Mui-focused {
-            color: color.$light-text !important;
+            &:not(.Mui-error) {
+                color: color.$light-text !important;
+            }
+            &.Mui-error {
+                color: color.$red !important;
+            }
         }
         .MuiFilledInput-root, .MuiFilledInput-root:hover {
             background-color: rgba(color.$white, 0.06) !important;
@@ -15,6 +20,14 @@
             }
             &::after {
                 border-bottom: 2px solid color.$white;
+            }
+            &.Mui-error {
+                &::before, &:hover::before {
+                    border-bottom: 1px solid rgba(color.$red, 0.42) !important;
+                }
+                &::after {
+                    border-bottom: 2px solid color.$red !important;
+                }
             }
             input, textarea {
                 color: color.$white;
