added clear button

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -78,7 +78,7 @@
             opacity: 1;
         }
     }
-    .save, .load {
+    .save, .load, .clear {
         position: relative;
         .MuiSvgIcon-root {
             color: color.$light;
